# quartz-arc

./: README.md  main.py  pyproject.toml  requirements.txt
src/adaapters/: lang_adapter.py
src/core/: async_utils.py  errors.py  result.py
src/domain/: types.py
src/mappers/: news_mapper.py
src/pipeline/: ingest_news.py
src/quarantine/: loose_dto.py  mapper_registry.py  news_mappers.py
src/schemas/: dto.py
src/services/: lang_policy.py
tests/unit/: _factory.py  test_branching.py  test_domain_types.py  test_dto_boundary.py  test_news_mapper.py  test_result.py
