[project]
name = "quartz-arc"
version = "0.1.0"
description = "ZAO (Zero-Ambiguity OOP) style Python project for News domain"
readme = "README.md"
requires-python = ">=3.12.10"
authors = [
    {name = "sky", email = "limhaneul12@naver.com"}
]

# 필수 의존성(코어)
dependencies = [
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyrefly>=0.30.0",
    "ruff>=0.12.10",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",          # 기본 테스트
    "pytest-cov>=5",      # 커버리지
    "hypothesis>=6",      # 속성 기반 테스트
    "respx>=0.21.1",      # httpx mocking
    "pytest-snapshot>=0.9" # 스냅샷 테스트
]

# === uv 설정 ===
[tool.uv]
python-preference = "only-managed"

# === Black 코드 포매터 ===
[tool.black]
line-length = 100
target-version = ["py312"]

# === Ruff (린트 + 포맷) ===
[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B","C90","N","S","DTZ","ASYNC","A","PIE","TRY","RUF"]
lint.ignore = ["E203"]
format.preview = true

# === Mypy (타입체커) ===
[tool.mypy]
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_any_expr = true
no_implicit_optional = true
mypy_path = "src"

# === Pytest 설정 ===
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]
